# evolving-creatures

./: README.md  evolving-creatures.cabal  stack.yaml
src/: Food.hs  GA.hs  GAOperators.hs  GATest.hs  Main.hs  Math.hs  NeuralNet.hs  NeuralNetTest.hs  Organism.hs  OrganismDNA.hs  Parameters.hs  Render.hs  Simulation.hs
