name:                evolving-creatures
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/evolving-creatures#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Vandamme
maintainer:          jovndmm@gmail.com
copyright:           2019 Jonathan Vandamme
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable evolving-creatures
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , MonadRandom
    , GLUT
    , clock
    , clock-extras
    , mtl
    , monad-loops
    , monadlist
    , containers
    , split
  other-modules:
      Render
    , Simulation
    , NeuralNet
    , GA
    , GATest
    , GAOperators
    , OrganismDNA
    , Organism
    , Food
    , Parameters
    , Math
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts
